--- a/web/index2.html
+++ b/web/index2.html
@@ -9,6 +9,11 @@
   <script type="text/javascript" src="js/forms.js"></script>
 </head>
 <body>
+  <div id="Container">
+    <header>
+      <h1>¡¡ ZORRILLO LTDA !!</h1>
+      <h2>Proyecto Pedidos Revista por Catálogo</h2>
+  </header>
 
 <div id="resultLogIn"></div>
 
@@ -38,6 +43,13 @@
 <script type="text/javascript" src="js/forms.js"></script>
 
 </script>
+
+<div class="clearfix"></div>
+                
+<footer>
+  Fabio Quimbay Parra & Leonel Prato (G10) "WEB PROGRAMERS" &copy; 2021
+</footer>
+</div>
 
 </body>
 </html>
