--- a/web/index.html
+++ b/web/index.html
@@ -65,7 +65,7 @@
         <div class="clearfix"></div>
                 
         <footer>
-          GRUPO 5 (G10) "WEB PROGRAMERS" &copy; 2021
+          Fabio Quimbay Parra & Leonel Prato GRUPO 5 (G10) "WEB PROGRAMERS" &copy; 2021
         </footer>
       </div>
 
