--- a/web/fraganceForm.html
+++ b/web/fraganceForm.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario Productos</title>
 
-  <!-- <link rel="stylesheet" href="css/login.css" /> -->
-
-  <title>Login_Zorillo LTDA</title>
+  <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" /> -->
+  <!-- <link rel="stylesheet" href="css/registrar.css"> -->
 
   <!-- Styles CSS -->
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"crossorigin="anonymous">
-
-  <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" /> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!-- Bootstrap CSS / ICONS -->
   <!--Icon de Bootstrap https://icons.getbootstrap.com-->
@@ -25,13 +24,12 @@
 </head>
 
 <body>
-
   <!--================================-->
   <!--============ HEADER ============-->
   <!--================================-->
 
   <header class="container-fluid bg-dark d-flex justify-content-center" id="header">
-    <img src="Images/Logo_Tienda2.png" width="80" height="80" id=logoShop>
+    <img src="Images/Logo_Tienda3.png" width="80" height="80" id=logoShop>
     <p>...</p>
     <div class="company_name">Zorillo LTDA</div>
   </header>
@@ -42,7 +40,7 @@
 
   <ul class="nav nav-tabs" id="menu">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="index.html" id="activeOption">Ingresar</a>
+      <a class="nav-link" aria-current="page" href="index.html" id="inactiveOption">Ingresar</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="registro.html" id="inactiveOption">Registrarse</a>
@@ -50,8 +48,8 @@
     <li class="nav-item">
       <a class="nav-link" href="userForm.html" id="inactiveOption">Registro Funcionario</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="fraganceForm.html" id="inactiveOption">Registro Producto</a>
+    <li class="nav-item" active>
+      <a class="nav-link" href="fraganceForm.html" id="activeOption">Registro Producto</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="tableUser.html" id="inactiveOption">Admon Usuarios</a>
@@ -88,68 +86,71 @@
                 <div class="sb-nav-link-icon "><i class="fas fa-home "></i></div>
                 Home
               </a>
-            </li>        
-            <li class="nav-item" > <a  class="nav-link active ps-5" href="registroProductos.html"> Lista de Productors</a></li>         
+            </li>
+            <li> <a href="registroProductos.html"> Lista de Productors</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header> -->
 
-  <!--====================================-->
-  <!--============ LOGIN FORM ============-->
-  <!--====================================-->
+  <!--=======================================-->
+  <!--============ REGISTER FORM ============-->
+  <!--=======================================-->
 
-  <div class="container-fluid">
-    <form>
-      <div class="row justify-content-center mt-5">
-        <div id="boxForm" class="col-6 p-5 rounded text-black">
-
-          <!--============ Title Form ============-->
-          <div class="text-center">
-            <h2 class="text-black">Inicio de sesion</h3>
-          </div>
-
-          <!--============ Input User ============-->
-          <div class="form-group">
-            <label for="useremail">E-mail</label>
-            <div class="input-group mb-3">
-              <span class="input-group-text" id="logoInput"><i class="bi bi-person-bounding-box text-black"
-                  id="logoPeople"></i></span>
-              <input type="email" class="form-control" placeholder="@ Usuario" name="useremail" id="useremail" required
-                pattern="\S+" title="El usuario no puede llevar espacios en blanco">
+  <div class="container">
+    <div id="login-row" class="row justify-content-center align-items-center">
+      <div id="login-column" class="col-md-6">
+        <div id="login-box" class="col-md-12">
+          <form id="userForm" class="form " method="post" action="#">
+            
+            <!--============ Title Form ============-->
+            <div class="text-center"><br>
+              <h2 class="text-white">Registrar Producto</h3>
             </div>
-          </div>
 
-          <!--============ Input Password ============-->
-          <div class="form-group">
-            <label for="password">Contraseña</label>
-            <div class="input-group mb-3">
-              <span class="input-group-text" id="logoInput"><i class="bi bi-key text-black"></i></span>
-              <input type="password" class="form-control" placeholder="Contraseña" name="password" id="password"
-                required pattern="\S+" title="La contraseña no puede llevar espacios en blanco">
-              <span class="input-group-text" id="showPassword" type="button" onclick="showPassword()"><i
-                  class="bi bi-eye" id="icon"></i></span>
+            <div class="form-group">
+              <label for="brandProd" class="text-white ">Marca</label><br />
+              <input type="text" name="brandProd" id="brandProd" class="form-control" required />
             </div>
-          </div>
+            <div class="form-group">
+              <label for="modelProd" class="text-white">Referencia</label><br />
+              <input type="text" name="modelProd" id="modelProd" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="categoriaProd" class="text-white">Categoria</label><br>
+              <input type="text" name="categoriaProd" id="categoriaProd" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="presentacionProd" class="text-white">Presentacion</label><br>
+              <input type="text" name="presentacionProd" id="presentacionProd" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="fotoProd" class="text-white">Fotografia</label>
+              <input type="text" name="fotoProd" id="fotoProd" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="descProd" class="text-white">Descripción</label>
+              <input type="text" name="descProd" id="descProd" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="priceProd" class="text-white">Precio</label><br>
+              <input type="number" name="priceProd" id="priceProd" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="quantityProd" class="text-white">Cantidad</label><br>
+              <input type="number" name="quantityProd" id="quantityProd" class="form-control" required>
+            </div>
 
-          <!--============ Button Login ============-->
-          <!--Este botton elimina los datos ingresado-->
-          <!-- <button class="log-in" onclick="login()" id="btnMain">Iniciar Secion</button> -->
-
-          <!--Este botton no elimina los datos ingresado-->
-          <div class="form-group text-center">
-              <input id="btnMain" type="button" name="submit" class="btn btn-info btn-md" value="Iniciar Secion"onclick="login()" />
-          </div>
-
-          <!--============ Label Register ============-->
-          <div class="text-center">
-            <p class="text-center text-black">¿No tienes una cuenta?
-              <a href="registro.html" style="color: blue;">Crear una cuenta</a>
-            </p>
-          </div>
+            <!--============ Buttons ============-->
+            <div class="form-group text-center">
+              <button type="button" onclick=" saveFragance()" id="btnMain" name="guardaeDatos"
+                value="Guardar">Guardar</button>
+              <button type="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button>
+            </div>
         </div>
       </div>
+    </div>
     </form>
   </div>
 
@@ -182,7 +183,9 @@
     crossorigin="anonymous"></script>
 
   <!-- Function with JS -->
-  <script src="js/login.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="js/fraganceForm.js"></script>
 
 </body>
 
