Cambio de url remota a local.

--- a/web/userForm.html
+++ b/web/userForm.html
@@ -150,8 +150,8 @@
 
             <!--============ Buttons ============-->
             <div class="form-group text-center">
-              <button type="submit" onclick="saveUser" id="btnMain" name="guardaeDatos" value="Guardar">Guardar</button>
-              <button type="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button>
+              <button type="submit" onclick="saveUser()" id="btnMain" name="guardaeDatos" value="Guardar">Guardar</button>
+             <!-- <button type="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button> -->
             </div>
         </div>
       </div>
