--- a/web/registroProductos.html
+++ b/web/registroProductos.html
@@ -71,31 +71,6 @@
     </li>
   </ul>
 
-  <!-- <header>
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ocho Bits LTDA</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-
-              <a class="nav-link active ps-5" aria-current="page" href="./index.html">
-                <div class="sb-nav-link-icon "><i class="fas fa-home "></i></div>
-                Home
-              </a>
-            </li>
-            <li class="nav-item" class="nav-link active ps-5"> <a class="nav-link active ps-5"
-                href="registroProductos.html"> Lista de Productors</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header> -->
-
   <!--========================================-->
   <!--============ INVENTORY TABLE============-->
   <!--========================================-->
@@ -103,15 +78,10 @@
   <script type="text/javascript">
     window.onload = traerInformacionProductos();
   </script>
-  <div class="container">
-    <div class="mx-auto col-sm-16 main-section" id="myTab" role="tablist">
-      <ul class="nav nav-tabs justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active" id="list-tab" data-toggle="tab" href="#list" role="tab" aria-controls="list"
-            aria-selected="false">Lista</a>
-        </li>
 
-      </ul>
+  <!--============ INVENTORY TABLE ============-->
+  <div class="container">
+    <div class="mx-auto col-sm-16 main-section" id="myTab" role="tablist"><br>
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="list" role="tabpanel" aria-labelledby="list-tab">
           <div class="card">
@@ -120,10 +90,9 @@
             </div>
             <div class="card-body">
               <div class="table-responsive">
-                <table id="userList" class="table table-bordered table-hover table-striped">
+                <table id="userList" class="table table-hover">
                   <thead class="thead-light">
                     <tr>
-
                       <th scope="col">Referencia</th>
                       <th scope="col">Marca</th>
                       <th scope="col">Categoria</th>
@@ -134,67 +103,79 @@
                       <th scope="col">Fotografia</th>
                       <th scope="col">Editar</th>
                       <th scope="col">Eliminar</th>
-
                     </tr>
                   </thead>
                   <tbody id="resultado3">
-
                   </tbody>>
-
                 </table>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container" id="editForm" style="visibility: hidden">
-    <div id="login-row" class="row justify-content-center align-items-center">
-      <div id="login-column" class="col-md-6">
-        <div id="login-box" class="col-md-12">
-          <form id="userForm" class="form " method="post" action="#">
-            <h3 class="text-center text-white">Registrar Producto</h3>
-            <div class="form-group">
-              <label for="brandProd" class="text-white ">Marca</label><br />
-              <input type="text" name="brandProd" id="brandProd" class="form-control" required />
-            </div>
-            <div class="form-group">
-              <label for="categoriaProd" class="text-white">Categoria</label><br>
-              <input type="text" name="categoriaProd" id="categoriaProd" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="presentacionProd" class="text-white">Presentacion</label><br>
-              <input type="text" name="presentacionProd" id="presentacionProd" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="fotoProd" class="text-white">Fotografia</label>
-              <input type="text" name="fotoProd" id="fotoProd" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="descProd" class="text-white">Descripción</label>
-              <input type="text" name="descProd" id="descProd" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="priceProd" class="text-white">Precio</label><br>
-              <input type="number" name="priceProd" id="priceProd" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="quantityProd" class="text-white">Cantidad</label><br>
-              <input type="number" name="quantityProd" id="quantityProd" class="form-control" required>
-            </div>
+  </div><br>
+
+  <!--============ EDIT TABLE ============-->
+  <!-- <div class="container" id="editForm" style="background-color: transparent;"> -->
+  <div class="container" id="editForm" style="background-color: transparent; visibility: hidden">
+
+
+    <div class="container" id="editForm" style="background-color: transparent;">
+      <div id="login-row" class="row justify-content-center align-items-center">
+        <div id="login-column" class="col-md-5">
+          <div id="login-box" class="col-md-12">
+            <form id="userForm" class="form" method="post" action="#">
+
+              <!--============ Title Form ============-->
+              <div class="text-center"><br>
+                <h2 class="text-white">Editar Producto</h3>
+              </div>
+
+              <div class="form-group">
+                <label for="brandProd" class="text-white ">Marca</label><br />
+                <input type="text" name="brandProd" id="brandProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="modelProd" class="text-white">Referencia</label><br />
+                <input type="text" name="modelProd" id="modelProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="categoriaProd" class="text-white">Categoria</label><br>
+                <input type="text" name="categoriaProd" id="categoriaProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="presentacionProd" class="text-white">Presentacion</label><br>
+                <input type="text" name="presentacionProd" id="presentacionProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="fotoProd" class="text-white">Fotografia</label>
+                <input type="text" name="fotoProd" id="fotoProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="descProd" class="text-white">Descripción</label>
+                <input type="text" name="descProd" id="descProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="priceProd" class="text-white">Precio</label><br>
+                <input type="number" name="priceProd" id="priceProd" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="quantityProd" class="text-white">Cantidad</label><br>
+                <input type="number" name="quantityProd" id="quantityProd" class="form-control">
+              </div>
+
+              <!--============ Buttons ============-->
+              <div class="form-group text-center">
+                <button type="button" onclick="editFragance()" id="btnMain" name="guardaeDatos"
+                  value="Guardar">Guardar</button>
+                <button type="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button>
+              </div>
+          </div>
         </div>
       </div>
+      </form>
     </div>
-    <div class="form-group text-center">
-      <button type="button" name="guardaeDatos" class="btn btn-dark btn-md" value="Guardar" onclick="editFragance()">
-        Enviar </button>
-      <input class="btn btn-dark btn-md" value="Cancelar" onclick="" />
-    </div>
-    </form>
-  </div>
-
 
   <!--====================================-->
   <!--============ FOOTER ============-->
