--- a/web/tableUser.html
+++ b/web/tableUser.html
@@ -76,64 +76,109 @@
   <!--============ USERS TABLE============-->
   <!--====================================-->
 
-  <div class="container" id="myListUser">
+  <script type="text/javascript">
+    window.onload = getUser();
+  </script>
 
-  </div>
-
-
-  <div class="container" id="editForm" style="visibility: hidden">
-    <div id="login-row" class="row justify-content-center align-items-center">
-      <div id="login-column" class="col-md-6">
-        <div id="login-box" class="col-md-12">
-          <form id="userForm" class="form " action="" method="post" style="color: white;">
-            <h3 class="text-center text-dark">Formulario de usuario</h3>
-            <div class="form-group">
-              <label for="identificationUser" class="text-dark">Identificación:</label><br />
-              <input type="number" name="identificationUser" id="identificationUser" class="form-control" required />
+  <!--============ INVENTORY TABLE ============-->
+  <div class="container">
+    <div class="mx-auto col-sm-16 main-section" id="myTab" role="tablist"><br>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="list" role="tabpanel" aria-labelledby="list-tab">
+          <div class="card">
+            <div class="card-header">
+              <h4>Usuarios</h4>
             </div>
-            <div class="form-group">
-              <label for="nameUser" class="text-dark">Nombre</label><br />
-              <input type="text" name="nameUser" id="nameUser" class="form-control" required>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table id="userList" class="table table-hover">
+                  <thead class="thead-light">
+                    <tr>
+                      <th scope="col">Identificacion</th>
+                      <th scope="col">Nombre</th>
+                      <th scope="col">Direccion</th>
+                      <th scope="col">Telefono</th>
+                      <th scope="col">Email</th>
+                      <th scope="col">Contraseña</th>
+                      <th scope="col">Zona</th>
+                      <th scope="col">Tipo Usuario</th>
+                    </tr>
+                  </thead>
+                  <tbody id="resultado3">
+                  </tbody>>
+                </table>
+              </div>
             </div>
-            <div class="form-group">
-              <label for="addressUser" class="text-dark">Dirección</label><br>
-              <input type="text" name="addressUser" id="addressUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="cellPhoneUser" class="text-dark">Telefono</label><br>
-              <input type="number" name="cellPhone" id="cellphoneUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="emailUser" class="text-dark">Correo</label>
-              <input type="email" name="emailUser" id="emailUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="passwordUser" class="text-dark">Contraseña</label><br>
-              <input type="password" name="passwordUser" id="passwordUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="zoneUser" class="text-dark">Zona</label><br>
-              <input type="text" name="zoneUser" id="zoneUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="typeUser" class="text-dark">Tipo Usuario</label><br>
-              <select name="typeUser" id="typeUser" class="form-control" required>
-                <option selected value="">Selecciona tipo de usuario</option>
-                <option value="coordinadorZona">Coordinador de zona</option>
-                <option value="asesorComercial">Asesor Comercial</option>
-              </select>
-            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="form-group text-center">
-      <input type="button" name="guardaeDatos" class="btn btn-dark btn-md" value="Guardar" onclick="updateUser()" />
+  </div><br>
 
+  <!--============ EDIT TABLE ============-->
+  <!-- <div class="container" id="myListUser" style="background-color: transparent;"> -->
+  <div class="container" id="myListUser" style="background-color: transparent; visibility: hidden"">
+
+    <div class="container" id="editForm" style="background-color: transparent;">
+      <div id="login-row" class="row justify-content-center align-items-center">
+        <div id="login-column" class="col-md-5">
+          <div id="login-box" class="col-md-12">
+            <form id="userForm" class="form" method="post" action="#">
+
+              <!--============ Title Form ============-->
+              <div class="text-center"><br>
+                <h2 class="text-white">Editar Usuario</h3>
+              </div>
+              <div class="form-group">
+                <label for="identificationUser" class="text-white">Identificación:</label><br />
+                <input type="number" name="identificationUser" id="identificationUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="nameUser" class="text-white">Nombre</label><br />
+                <input type="text" name="nameUser" id="nameUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="addressUser" class="text-white">Dirección</label><br>
+                <input type="text" name="addressUser" id="addressUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="cellPhoneUser" class="text-white">Telefono</label><br>
+                <input type="number" name="cellPhone" id="cellphoneUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="emailUser" class="text-white">Correo</label>
+                <input type="email" name="emailUser" id="emailUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="passwordUser" class="text-white">Contraseña</label><br>
+                <input type="password" name="passwordUser" id="passwordUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="zoneUser" class="text-white">Zona</label><br>
+                <input type="text" name="zoneUser" id="zoneUser" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="typeUser" class="text-white">Tipo Usuario</label><br>
+                <select name="typeUser" id="typeUser" class="form-control">
+                  <option selected value="" disabled>Selecciona tipo de usuario</option>
+                  <option value="coordinadorZona">Coordinador de zona</option>
+                  <option value="asesorComercial">Asesor Comercial</option>
+                </select>
+              </div>
+
+              <!--============ Buttons ============-->
+              <div class="form-group text-center">
+                <button type="button" onclick="updateUser()" id="btnMain" name="guardaeDatos"
+                  value="Guardar">Guardar</button>
+                <button type="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button>
+              </div>
+          </div>
+          </form>
+        </div>
+      </div>
     </div>
-    </form>
   </div>
-
-
+  
   <!--====================================-->
   <!--============ FOOTER ============-->
   <!--====================================-->
