--- a/web/userForm.html
+++ b/web/userForm.html
@@ -71,91 +71,113 @@
     </li>
   </ul>
 
-  <!-- <header>
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ocho Bits LTDA</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
+  <!--===========================================================-->
+  <!--============ FORMULARIO REGISTRO FUNCIONARIO ============-->
+  <!--=========================================================-->
 
-              <a class="nav-link active ps-5" aria-current="page" href="./index.html">
-                <div class="sb-nav-link-icon "><i class="fas fa-home "></i></div>
-                Home
-              </a>
-            </li>
-            <li class="nav-item" class="nav-link active ps-5"> <a href="registroProductos.html"> Lista de Productors</a>
-            </li>
-          </ul>
+  <div class="container-fluid">
+    <form id="formf">
+      <div class="row justify-content-center mt-3">
+        <div id="boxForm" class="col-6 p-5 rounded text-black">
+
+          <!--============ Title Form ============-->
+          <div class="text-center">
+            <h2 class="text-black">Registro Funcionario Nuevo</h3><br>
+          </div>
+
+          <!--============ Input Identification============-->
+          <div class="form-group">
+            <label for="identificationUser">Identificacion</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-upc-scan text-black"
+                  id="logoPeople"></i></span>
+              <input type="text" class="form-control" placeholder="Identificacion" name="identificationUser"
+                id="identificationUser" required pattern="\S+"
+                title="La Identificacion no puede llevar espacios en blanco">
+            </div>
+          </div>
+
+          <!--============ Input Name ============-->
+          <div class="form-group">
+            <label for="nameUser">Nombre</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-person-plus-fill text-black"
+                  id="logoPeople"></i></span>
+              <input type="text" class="form-control" placeholder="Nombre" name="nameUser" id="nameUser" required>
+            </div>
+          </div>
+
+          <!--============ Input Address ============-->
+          <div class="form-group">
+            <label for="addressUser">Direccion</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-house-fill text-black"
+                  id="logoPeople"></i></span>
+              <input type="text" class="form-control" placeholder="Direccion" name="addressUser" id="addressUser"
+                required>
+            </div>
+          </div>
+
+          <!--============ Input Phone ============-->
+          <div class="form-group">
+            <label for="cellphoneUser">Telefono</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-telephone-fill text-black"
+                  id="logoPeople"></i></span>
+              <input type="text" class="form-control" placeholder="Telefono" name="cellphoneUser" id="cellphoneUser"
+                required pattern="\S+" title="El numero telefonico no puede llevar espacios en blanco">
+            </div>
+          </div>
+
+          <!--============ Input Email ============-->
+          <div class="form-group">
+            <label for="emailUser">Email</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-envelope-fill text-black"
+                  id="logoPeople"></i></span>
+              <input type="email" class="form-control" placeholder="@ Email" name="emailUser" id="emailUser" required
+                pattern="\S+" title="El email no puede llevar espacios en blanco">
+            </div>
+          </div>
+
+          <!--============ Input Password ============-->
+          <div class="form-group">
+            <label for="passwordUser">Contraseña</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-key text-black"></i></span>
+              <input type="password" class="form-control" placeholder="Contraseña" name="passwordUser" id="passwordUser"
+                required>
+            </div>
+          </div>
+
+          <!--============ Input Zone ============-->
+          <div class="form-group">
+            <label for="zoneUser">Zona</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="logoInput"><i class="bi bi-diagram-3-fill text-black"
+                  id="logoPeople"></i></span>
+              <input type="text" class="form-control" placeholder="Zona" name="zoneUser" id="zoneUser" required>
+            </div>
+          </div>
+
+          <!--============ Input Type User ============-->
+          <div class="col-md-13">
+            <label for="typeUser" class="form-label" id="labelInput">Tipo Usuario</label>
+            <select class="form-select" id="typeUser" required>
+              <option selected disabled value="">Tipo Usuario</option>
+              <option value="coordinadorZona">Coordinador de zona</option>
+              <option value="asesorComercial">Asesor Comercial</option>
+            </select>
+          </div>
+
+          <!--============ Button Login ============-->
+          <div class="form-group text-center">
+            <button class="submit" onclick="saveUser()" id="btnMain" name="guardaeDatos"
+              value="Guardar">Guardar</button>
+            <button class="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button>
+          </div>
         </div>
       </div>
-    </nav>
-  </header> -->
-
-  <!--=======================================-->
-  <!--============ REGISTER FORM ============-->
-  <!--=======================================-->
-
-  <div class="container">
-    <div id="login-row" class="row justify-content-center align-items-center">
-      <div id="login-column" class="col-md-6">
-        <div id="login-box" class="col-md-12">
-          <form id="userForm" class="form " action="" method="post">
-
-            <!--============ Title Form ============-->
-            <div class="text-center"><br>
-              <h2 class="text-white">Formulario de usuario</h3>
-            </div>
-
-            <div class="form-group">
-              <label for="identificationUser" class="text-white ">Identificación:</label><br />
-              <input type="number" name="identificationUser" id="identificationUser" class="form-control" required />
-            </div>
-            <div class="form-group">
-              <label for="nameUser" class="text-white">Nombre</label><br />
-              <input type="text" name="nameUser" id="nameUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="addressUser" class="text-white">Dirección</label><br>
-              <input type="text" name="addressUser" id="addressUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="cellPhoneUser" class="text-white">Telefono</label><br>
-              <input type="number" name="cellPhone" id="cellphoneUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="emailUser" class="text-white">Correo</label>
-              <input type="email" name="emailUser" id="emailUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="passwordUser" class="text-white">Contraseña</label><br>
-              <input type="password" name="passwordUser" id="passwordUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="zoneUser" class="text-white">Zona</label><br>
-              <input type="text" name="zoneUser" id="zoneUser" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="typeUser" class="text-white">Tipo Usuario</label><br>
-              <select name="typeUser" id="typeUser" class="form-control" required>
-                <option selected value="" disabled>Selecciona tipo de usuario</option>
-                <option value="coordinadorZona">Coordinador de zona</option>
-                <option value="asesorComercial">Asesor Comercial</option>
-              </select>
-            </div>
-
-            <!--============ Buttons ============-->
-            <div class="form-group text-center">
-              <button type="submit" onclick="saveUser()" id="btnMain" name="guardaeDatos" value="Guardar">Guardar</button>
-             <!-- <button type="button" onclick="" id="btnMain" name="cancelarDatos" value="Cancelar">Cancelar</button> -->
-            </div>
-        </div>
-      </div>
-    </div>
     </form>
   </div>
 
