Carga del front actualizado

--- a/web/registro.html
+++ b/web/registro.html
@@ -104,7 +104,7 @@
                         <label for="useremail">E-mail</label>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="logoInput">
-                                <i class="bi bi-person-bounding-box text-black" id="logoPeople">
+                                <i class="bi bi-envelope-fill text-black" id="logoPeople">
                                 </i></span>
                             <input type="email" class="form-control" placeholder="@ Usuario" name="useremail"
                                 id="useremail" required="required">
@@ -139,8 +139,8 @@
 
                     <!--============ Label Register ============-->
                     <div class="text-center">
-                        <p class="text-center text-black">¿No tienes una cuenta?
-                            <a href="registro.html" style="color: blue;">Crear una cuenta</a>
+                        <p class="text-center text-black">¿Ya tienes cuenta?
+                            <a href="index.html" style="color: blue;">Ingresa Aqui</a>
                         </p>
                     </div>
                 </div>
