--- a/web/fraganceForm.html
+++ b/web/fraganceForm.html
@@ -66,7 +66,7 @@
       </ul>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#" id="inactiveOption">Contactanos</a>
+      <a class="nav-link" href="contact.html" id="inactiveOption">Contactanos</a>
     </li>
   </ul>
 
