Integracion de escenarios Reto4.

--- a/web/tableUser.html
+++ b/web/tableUser.html
@@ -117,7 +117,7 @@
 
   <!--============ EDIT TABLE ============-->
   <!-- <div class="container" id="myListUser" style="background-color: transparent;"> -->
-  <div class="container" id="myListUser" style="background-color: transparent; visibility: hidden"">
+  <div class="container" id="myListUser" style="background-color: transparent">
 
     <div class="container" id="editForm" style="background-color: transparent;">
       <div id="login-row" class="row justify-content-center align-items-center">
@@ -127,7 +127,7 @@
 
               <!--============ Title Form ============-->
               <div class="text-center"><br>
-                <h2 class="text-white">Editar Usuario</h3>
+                <h2 class="text-white">Editar Usuario</h2>
               </div>
               <div class="form-group">
                 <label for="identificationUser" class="text-white">Identificación:</label><br />
